# coeus-sphinx-theme

./: .gitignore  LICENSE  README.rst  pyproject.toml  requirements-dev.txt  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json
.github/: FUNDING.yml
.github/workflows/: multienv.yml
coeus_sphinx_theme/: __init__.py  breadcrumbs.html  breadcrumbs.html.jinja  contributor_hero.html  contributors.html.jinja  footer.html  footer.html.jinja  header.html  layout.html  mini_sidebar.html.jinja  navbar.html  navbar.html.jinja  navbar_links.html  navbar_links.html.jinja  notebook.html.jinja  options.py  page.html  page.html.jinja  previous_next.html  previous_next.html.jinja  search.html  searchbox.html  searchbox.html.jinja  sidebar.html  sidebar.html.jinja  sidebar_navbar_links.html  sidebar_toc.html  theme.conf  title_hero.html.jinja  toc.html.jinja  utils.py  video.html.jinja  youtube_video.html.jinja
coeus_sphinx_theme/extensions/: __init__.py  abstract_content.py  announcement.py  contributor_hero.py  contributors.py  documentation_hero.py  embed_youtube.py  general_video.py  glossary_table.py  headshots.py  homelander.py  notebook.py  roles.py  step_flow.py  title_hero.py  top_ribbon.py  youtube_video.py
coeus_sphinx_theme/static/: animations.css  coeus.css  coeus.js  coeus_sphinx_theme.css  main.js  theme.css  theme.js
