[build-system]
requires = [ "setuptools", "setuptools-scm" ]
build-backend = "setuptools.build_meta"

[project]
name = "coeus-sphinx-theme"
dynamic = [ "version", "dependencies" ]
description = "A Sphinx Documentation Theme."
readme = "README.rst"
requires-python = ">=3.8"
license.file = "LICENSE"
authors = [
  { name = "Akshay Mestry", email = "xa@mes3.dev" }
]
keywords = [ "coeus", "sphinx", "python", "nasa" ]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Framework :: Sphinx :: Theme",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Documentation",
  "Topic :: Software Development :: Documentation"
]
urls.Code = "https://github.com/xames3/coeus-sphinx-theme"
urls.Download = "https://pypi.org/project/coeus-sphinx-theme/"
urls.Homepage = "https://github.com/xames3/coeus-sphinx-theme/"
urls."Issue tracker" = "https://github.com/xames3/coeus-sphinx-theme/issues"

[project.entry-points."sphinx.html_themes"]
coeus_sphinx_theme = "coeus_sphinx_theme"

[tool.setuptools]
packages = ["coeus_sphinx_theme"]

[tool.setuptools.dynamic]
version = { attr = "coeus_sphinx_theme.theme_version" }
dependencies = { file = "requirements.txt" }

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80
force_single_line = true
force_sort_within_sections = false

[tool.mypy]
files = ["coeus_sphinx_theme/*.py", "docs/*.py"]
show_error_codes = true
show_error_context = true
pretty = true
strict = true
show_column_numbers = true
warn_unreachable = true
warn_unused_ignores = true
warn_unused_configs = true
check_untyped_defs = true
disallow_incomplete_defs = true
ignore_missing_imports = true
disable_error_code = ["attr-defined", "index", "union-attr"]

[tool.tox]
requires = ["tox>=4"]
envlist = ["py312", "py311", "py310", "py39", "py38", "static"]

[tool.tox.env.static]
deps = ["-r requirements-dev.txt"]
commands = [
  ["black", "-q", "coeus_sphinx_theme/"],
  ["flake8", "coeus_sphinx_theme/"],
  ["isort", "--sl", "coeus_sphinx_theme/"],
  ["mypy", "coeus_sphinx_theme/"],
]
